# BiliRoamingX

./: .gitignore  .gitmodules  .releaserc  CHANGELOG.md  README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  package-lock.json  settings.gradle  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-issue.yml  bug-report.md  config.yml  feature-issue.yml  feature_request.md
.github/workflows/: ci.yml  pr.yml  pull_request.yml  release.yml  update-gradle-wrapper.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/: BuildLogic.kt  Projects.kt  Versions.kt
dummy/: build.gradle.kts
dummy/src/main/java/android/app/: ActivityThread.java
extend/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
integrations/app/: build.gradle.kts  proguard-rules-dev.pro  proguard-rules.pro
integrations/app/src/main/jni/: CMakeLists.txt  biliroamingx.cc
integrations/dummy/: build.gradle.kts
integrations/extend/: build.gradle.kts
integrations/ksp/: build.gradle.kts
patches/: .gitignore  build.gradle.kts  patches.json
patches/src/main/resources/bilibili/drawable/: biliroaming_ic_clear.xml  biliroaming_ic_search.xml
patches/src/main/resources/bilibili/layout/: biliroaming_dialog_access_key.xml  biliroaming_dialog_area_server.xml  biliroaming_dialog_argb_color_choose.xml  biliroaming_dialog_color_choose.xml  biliroaming_search_bar.xml
patches/src/main/resources/bilibili/xml/: biliroaming_locales_config.xml  (+43 more)
(+2232 files in other folders)
